--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <div id="page1" class="page">
     <h1>Hey… I need to confess something</h1>
-    <img src="penguin.jpg" class="penguin">
+    <img src="penguin.jpeg" class="penguin">
     <button onclick="showStory()">What really happened?</button>
 </div>
 
