--- a/index.html
+++ b/index.html
@@ -11,35 +11,35 @@
 <!-- Page 1: Initial question -->
 <div id="page1" class="page">
     <h1>Hey... have you seen your bowling ball?</h1>
-    <img src="penguin.jpeg" class="penguin innocent">
+    <img src="penguin.png" class="penguin innocent">
     <button onclick="showPage2()">No, have you?</button>
 </div>
 
 <!-- Page 2: Denial -->
 <div id="page2" class="page hidden">
     <h1>Bowling ball??? <br>I haven't seen your bowling ball... 🤔</h1>
-    <img src="penguin.jpeg" class="penguin nervous">
+    <img src="penguin.png" class="penguin nervous">
     <button onclick="showPage3()">Are you sure?</button>
 </div>
 
 <!-- Page 3: Starting to crack -->
 <div id="page3" class="page hidden">
     <h1>Okay fine... <br>I might have seen it...</h1>
-    <img src="penguin.jpeg" class="penguin shaking">
+    <img src="penguin.png" class="penguin shaking">
     <button onclick="showPage4()">Tell me the truth!</button>
 </div>
 
 <!-- Page 4: The confession -->
 <div id="page4" class="page hidden">
     <h1>I... I ate it 🐧💦</h1>
-    <img src="penguin.jpeg" class="penguin guilty">
+    <img src="penguin.png" class="penguin guilty">
     <button onclick="showPage5()">WHAT?! Why??</button>
 </div>
 
 <!-- Page 5: The reason -->
 <div id="page5" class="page hidden">
     <h1>Because I wanted you <br>to come see me... 👉👈</h1>
-    <img src="penguin.jpeg" class="penguin shy">
+    <img src="penguin.png" class="penguin shy">
     <button onclick="showPage6()">Oh...</button>
 </div>
 
@@ -47,7 +47,7 @@
 <div id="page6" class="page hidden">
     <div class="rose">🌹</div>
     <h1>So... will you be my Valentine? 💕</h1>
-    <img src="penguin.jpeg" class="penguin hopeful">
+    <img src="penguin.png" class="penguin hopeful">
     
     <div class="button-container">
         <button id="yesBtn" onclick="yesClicked()">Yes 💖</button>
@@ -58,7 +58,7 @@
 <!-- Success page -->
 <div id="success" class="page hidden">
     <h1>BEST DECISION OF YOUR LIFE ❤️</h1>
-    <img src="penguin.jpeg" class="penguin celebrating">
+    <img src="penguin.png" class="penguin celebrating">
     <h2>The penguin is very happy 🐧💘</h2>
 </div>
 
