--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
         <h3>Let's meet here! 📍</h3>
         <p class="venue-text">Picnic date in the ground behind Jammin<br>Around noon 🧺☀️</p>
     </div>
+    
+    <button class="secret-btn" onclick="revealSecret()">🤫</button>
+    <div id="secretMessage" class="secret-message hidden">
+        <p>P.S. I think I've a crush on you 💕</p>
+    </div>
 </div>
 
 <script src="script.js"></script>
